Highlight on keyboard move as well

--- a/src/style.css
+++ b/src/style.css
@@ -138,7 +138,7 @@
 
 [data-board-state="awaiting-input"] [data-square].moveable:hover,
 [data-board-state].moving [data-square].move-target:hover,
-[data-board-state="dragging"] [data-square].drag-hovering {
+[data-board-state].moving [data-square].highlighted-target {
   --p-square-color: var(--p-hover-square-color);
 }
 
